<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Strings -->
    <string name="app_name">OTA Updater</string>
    <string name="preferences_name">Settings</string>
    <string name="download_folder">/sdcard/Download/</string>
    <string name="list_summary">%s</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>  
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="directory_picker_name">Choose a directory</string>
    <string name="choose">Choose</string>
    <string name="could_not_read_folder">Could not read folder contents</string>
    <string name="http_download">HTTP Download</string>
    <string name="open_browser">Open Browser</string>

    <!--  Dialogs -->
    <string name="not_preferred_network">Please connect to Wi-fi, or check your preferred network setting in preferences</string>
    <string name="connect_before_download">Please connect to the internet before trying to downloaded</string>
    <string name="connect_before_update">Please connect to the internet before trying to update</string>
    <string name="not_connected">Not Connected</string>
    <string name="checking_for_update">Checking for update&#8230;</string>
    <string name="rebooting">Rebooting&#8230;</string>
    <string name="checking_md5">Checking MD5&#8230;</string>
    <string name="md5_ok">MD5 Passed - File OK</string>
    <string name="md5_failed">MD5 Failed - File error</string>
    <string name="not_supported_message">The necessary build.prop values could not be found. Please revert any build.prop changes, or speak to your ROM developer.</string>
    
    
    <!-- Notification -->
    <string name="update_available">Update Available</string>
    <string name="download_cancelled">Download Cancelled</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_in_progress">Download in progress&#8230;</string>
    
    <!-- Activities -->
    <string name="check_for_updates_title">Check for updates</string>
    <string name="check_for_updates_information">Download any updates and install them</string>
    <string name="check_for_updates_summary">Tap to check for updates</string>
    <string name="check_for_updates_available">Update Available, tap to download</string>
    
    <string name="download_extras_title">Download Extras</string>
    <string name="download_extras_information">Download any extra or supporting files</string>
    
    <string name="download_gapps_title">Download Google Apps</string>
    <string name="download_gapps_information">Download the latest Google Apps packages</string>
    
    <string name="rom_information">ROM information</string>
    <string name="rom_name">ROM name:</string>
    <string name="rom_version">ROM version:</string>
    <string name="rom_codename">ROM codename:</string>
    <string name="rom_build_date">ROM date:</string>
    <string name="android_verison">Android version:</string>
    <string name="rom_developer">Developer(s):</string>
    <string name="rom_website">Website</string>
    <string name="rom_donate">Donate</string>
    
    <string name="no_update">You are currently up to date</string>
    <string name="last_checked">Last checked for an update at</string>
    
    <string name="no_updates_title">No update available</string>
    <string name="update_available_title">Update Available!</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="update_available_name">Update name and file info here</string>
    <string name="update_progress_counter">0MB / 0MB</string>
    <string name="update_changelog_title">Changelog</string>
    <string name="update_changelog_content">Your Changelog goes here</string>
    <string name="update_md5">MD5: </string>
    <string name="check_md5_button">Check MD5</string>
    <string name="ready_to_flash">Ready to flash</string>
        
    <string name="ongoing_download_title">Filename</string>
    <string name="ongoing_download_information">Download Progress</string>
    
    <!-- Preferences -->
    <string name="twrp_ors_cat">OpenRecoveryScript</string>
    <string name="twrp_ors_title">Enable OpenRecoveryScript</string>
    <string name="twrp_ors_summary">Works for TWRP and some custom CWM (not official) recoveries</string>
    <string name="twrp_ors_information">Enables this app to flash the file via recovery without any interaction needed from the user. Just hit install and wait for it to finish.</string>

	<string name="background_service_title">Background service</string>
	<string name="background_service_summary">Automatically check for updates and show a notification if one is available</string>
	<string name="background_frequency">Update check frequency</string>
	<string name="background_30mins">30 Mins</string>
	<string name="background_60mins">60 Mins</string>
	<string name="background_2hours">2 Hours</string>
	<string name="background_3hours">3 hours</string>
	<string name="background_6hours">6 hours</string>
	<string name="background_12hours">12 hours</string>
	<string name="background_24hours">Daily</string>
	<string name="background_2days">2 days</string>
	<string name="background_3days">3 days</string>
	<string name="background_7days">Weekly</string>
	
	<string name="download_location">Download location</string>
	
	<string name="theme_title">App Theme</string>
	
	<string name="mobile_wifi_network">Network</string>
	<string name="mobile_wifi_title">Update over network</string>
	<string name="wifi_network_only">Wi-Fi only</string>
	<string name="mobile_or_wifi">Mobile or Wi-Fi</string>
	
	<string name="theme">Theme</string>
	<string name="theme_dark">Dark</string>
	<string name="theme_light">Light</string>
	<string name="theme_light_dark">Light, Dark ActionBar</string>
	
	<string name="ads">Ads</string>
	<string name="enable_ads">Enable Ads</string>
	<string name="ads_summary">Showing ads helps me out a little, and they\'re not very intrusive. But if you would prefer to disable them, you can. (Restart App)</string>
	
	<!-- About -->
	<string name="about">About</string>
	<string name="about_text">This app was born out of my frustration of using other apps that didn\'t work how I wanted them to. I developed it for my ROM, but quickly realised other developers might find this useful as well. As a result, I generalised it and wrote up some implementation guides for other developers to use.</string>
	<string name="credits">Credits</string>
	<string name="credits_text">Placeholder</string>
	<string name="donate">Donate</string>
	<string name="donate_text">Did this app help you, or make your life easier? Consider a sending a beer my way to say thanks.</string>
</resources>