<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Copyright (C) 2014 Matt Booth (Kryten2k35).
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        
    	<TextView
	    	android:id="@+id/updater_rom_information"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rom_information"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    	
    	<TextView
	    	android:id="@+id/updater_rom_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rom_name"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    	
    	<TextView
	    	android:id="@+id/updater_rom_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rom_version"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
   
    	<TextView
	    	android:id="@+id/updater_rom_codename"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rom_codename"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

    	<TextView
    	    android:id="@+id/updater_rom_date"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/rom_build_date"
    	    android:textAppearance="?android:attr/textAppearanceSmall" />

    	<TextView
    	    android:id="@+id/updater_android_version"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/android_verison"
    	    android:textAppearance="?android:attr/textAppearanceSmall" />

    	<TextView
    	    android:id="@+id/updater_rom_developer"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/rom_developer"
    	    android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>