<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Copyright (C) 2014 Matt Booth (Kryten2k35).
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="15dp">
	    
        <TextView
	        android:id="@+id/updater_update_available"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/update_available_name"
	        android:textSize="28sp"
	        android:textColor="@color/holo_blue_light" />

        <ProgressBar
            android:id="@+id/update_download_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/updater_download_progress_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/update_progress_counter"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/updater_update_md5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/update_md5"
            android:textSize="10sp"  />
        
	        <LinearLayout
				android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginBottom="10dp"
	            android:layout_marginTop="10dp"
			    android:id="@+id/updater_download_button_layout">

	            <Button
	                android:id="@+id/updater_check_md5_button"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/check_md5_button"
	                android:layout_weight="1" />
	        
		        <Button
		            android:id="@+id/updater_download_update_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/download"
		            android:layout_weight="1" />

		</LinearLayout>
        <TextView
            android:id="@+id/updater_update_changelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_changelog_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ScrollView
            android:id="@+id/updater_changelog_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
		            android:id="@+id/updater_update_changelog_content"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/update_changelog_content"
		            android:singleLine="false"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>