<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Copyright (C) 2014 Matt Booth (Kryten2k35).
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/UpdaterListElement"
        android:background="@null">
	    <TextView
	        android:id="@+id/info_about"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/info_about_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/UpdaterListElement"
        android:background="@null">
	    <TextView
	        android:id="@+id/info_credits"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/credits"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/info_credits_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/credits_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/UpdaterListElement"
        android:background="@null">
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/donate"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/donate_text"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/UpdaterListElement"
        android:background="@null">
	    <ImageButton
	        android:id="@+id/about_donate_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="donate"
	        android:src="@drawable/ic_beer"/>
	 </LinearLayout>
	 
	 <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator" />
	 
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:background="@null"
        android:id="@+id/adView">

	</LinearLayout>
</LinearLayout>
