<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Copyright (C) 2014 Matt Booth (Kryten2k35).
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <!-- No Updates available -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openUpdates"
        style="@style/UpdaterListElement"
        android:id="@+id/updater_no_updates">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_for_updates_title"
            android:src="?attr/downloadIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_check_for_updates_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_updates_title"
                android:textColor="?attr/colorHoloRed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_check_for_updates_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_checked"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
    
    <!-- Updates Available -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openUpdates"
        style="@style/UpdaterListElement"
        android:id="@+id/updater_updates_available">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_for_updates_title"
            android:src="?attr/downloadIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_available_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_available_title"
                android:textColor="?attr/colorHoloGreen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_available_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openOngoingUpdate"
        style="@style/UpdaterListElement"
        android:id="@+id/updater_ongoing_download_layout" >

        <ImageView
            android:id="@+id/updater_ongoing_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_for_updates_title"
            android:src="?attr/downloadIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_ongoing_download_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing_download_title"
                android:textColor="?attr/colorHoloBlue"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			<ProgressBar
	            android:id="@+id/update_download_progress_bar"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/updater_ongoing_download_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ongoing_download_information"
                android:textSize="10sp" />

        </LinearLayout>
        
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openExtraDownloads"
        style="@style/UpdaterListElement"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/updater_downloads_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download_extras_title"
            android:src="?attr/downloadExtraIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_download_extras_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_extras_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_download_extra_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_extras_information"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openGapps"
        style="@style/UpdaterListElement"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/updater_gapps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download_gapps_title"
            android:src="?attr/downloadGappsIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_gapps_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_gapps_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_gapps_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_gapps_information"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator" />
    
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="openDevLink"
	        style="@style/UpdaterListElement"
	        android:id="@+id/updater_dev_link">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_for_updates_title"
            android:src="?attr/browserIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_dev_link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rom_website"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_dev_link_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
    
    	<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="?attr/separator"
	        android:id="@+id/updaterLinkSeparator"  />
	    	
    	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="openDevDonateLink"
	        style="@style/UpdaterListElement"
	        android:id="@+id/updater_dev_donate_link">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_for_updates_title"
            android:src="?attr/donateIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updater_dev_donate_link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rom_donate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/updater_dev_donate_link_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>
    
    	<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="?attr/separator"
	        android:id="@+id/updaterDonateSeparator" />

    <include layout="@layout/updater_rom_info" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?attr/separator" />
	 
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:background="@null"
        android:id="@+id/adView">

	</LinearLayout>

</LinearLayout>